syntax = "proto3";
package pl.humberd.salary_comparator.proto;

message ConverterFormState {
    string source_currency = 1;
    string target_currency = 2;
    optional string amount = 3;
    string amount_unit = 4;
}
